--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,10 @@ tr:hover{
   background-color: #333;
 }
 
-echo "# Exam-Rizki-Afrili" >> README.md
+/* echo "# Exam-Rizki-Afrili" >> README.md
 git init
+git add .
 git commit -m "first commit"
 git branch -M main
 git remote add origin https://github.com/R2IProject/Exam-Rizki-Afrili.git
-git push -u origin main
+git push -u origin main */
